--- a/package.json
+++ b/package.json
@@ -18,19 +18,26 @@
     "lint:fix": "eslint --ext ts --fix src",
     "makemigrations": "foal rmdir build && tsc -p tsconfig.app.json && npx typeorm migration:generate --name migration && tsc -p tsconfig.app.json",
     "migrations": "npx typeorm migration:run",
-    "revertmigration": "npx typeorm migration:revert"
+    "revertmigration": "npx typeorm migration:revert",
+    "createuser": "foal run create-user email=test@example.com name=Test password=admin",
+    "createproposals": "foal run create-proposals title1=WebDeveloper title2=AccountManager",
+    "mockdata": "npm run createuser && npm run createproposals"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
     "@foal/core": "^2.0.0",
+    "@foal/jwt": "^2.4.0",
     "@foal/typeorm": "^2.0.0",
     "better-sqlite3": "~7.1.2",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.6.0",
     "source-map-support": "~0.5.19",
     "typeorm": "0.2.26"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mocha": "7.0.2",
     "@types/node": "10.17.24",
     "@typescript-eslint/eslint-plugin": "~2.7.0",
